--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,12 @@
     "plugin:prettier/recommended",
     "prettier/react"
   ],
-  "plugins": ["react", "import", "prettier", "jsx-a11y"],
+  "plugins": [
+    "react",
+    "import",
+    "prettier",
+    "jsx-a11y"
+  ],
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 2018,
@@ -26,14 +31,31 @@
   },
   "rules": {
     "no-console": 1,
-    "linebreak-style": ["error", "unix"],
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "jsx-a11y/no-onchange": 0,
-    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+    "linebreak-style": [
+      "error",
+      "unix"
+    ],
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [
+          ".js",
+          ".jsx"
+        ]
+      }
+    ],
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": true
+      }
+    ],
     "react/destructuring-assignment": [
       2,
       "always",
-      { "ignoreClassFields": true }
+      {
+        "ignoreClassFields": true
+      }
     ]
   },
   "globals": {
@@ -46,4 +68,3 @@
     "navigator": true
   }
 }
-
